@@ -4,6 +4,8 @@ version ? (????-??-??):
 
   - disposable liabilities (alec)
   - introduction to UI modularity (lukasz)
+  - use HTTP_X_FORWARDED_FOR, HTTP_CLIENT_IP, REMOTE_ADDR to retrive 
+    user IP address (Jerzy Kolosowski)
 
 version 1.7.5 (2005-11-05):
 
